	Spectra program is now available for use.
	* Core library is created that combines a lot of previously modularized 
	code into a single central library. This fixes the circular dependencies 
	between the libraries that were causing build problems.
	* TclGrammerApp is no longer derived from CTclApplication. It is now 
	a singleton. This change introduces a minor change that users will have
	to make to their Skeleton.cpp files.
	* win file parser is made more loosely coupled to the presence of a 
	shared memory segment. It can parse properly win files that specify
	spectra by their name rather than their slot id.
	* spectrum command is no longer able to deal with pure histogram ids
	so that it works when there is no shared memory segment.
	*  Added spectcl/version URI to rest interface.
	*  Linked docs for the fit command to the user guid.
	*  Fixed bug #4960 - running SpecTcl from ~ fails. Note users will
	need to get the new SpecTclRC.tcl from Skel.
	* Fix for bug #5642 - Xamine compilation warnings.
5.0-experimental - try to slip root under the hood.
	* Resolve data type conflicts between typedefs in SpecTcl and those
	in root in favor or root.
	* Make Spectrum1DL histogram into TH1I
	* Make Spectrum1DW histogram into TH1W
	* Make Spectrum1DB histogram into TH1C
	* Make Spectrum2DL histogram into TH2I
	* Make Spectrum2DW histogram into TH2W
	* Make Spectrum2DB histogram into TH2C
	* First shot at merging SpecTcl and Root Event loops.
	* Add rootexec command - executes a root macro file in root
	interp.
	* Replace Tcl exit command with gApplication->Terminate()
	operation.  Voids segfaults.
	* Slide TH1I underneath the hood of CBitSpectrumL
	* Slide TH1S underneath the hood of CBitSpectrumW
	* Slide a TH1I under the hood of CGamma1DL
	* Slide a TH1S under the hood of a CGamma1DW
	* Slide a TH2C under the hood of CGamma2DB
	* Slide a TH2I under the hood of CGamma2DL
	* Slide a TH2S under the hood of CGamma2DW
